# concierge

./: README.md
frontend/: .gitignore  Dockerfile  Makefile  package.json  pnpm-lock.yaml
frontend/src/: client.ts  index.tsx
frontend/src/routes/: +page.svelte
frontend/src/routes/catering/: +page.svelte
frontend/src/routes/equipment/: +page.svelte
frontend/src/routes/flights/: +page.svelte
frontend/src/routes/ground-transport/: +page.svelte
frontend/src/routes/per-diem/: +page.svelte
frontend/src/routes/printing/: +page.svelte
frontend/src/routes/translations/: +page.svelte
frontend/src/routes/venue/: +page.svelte
frontend/src/routes/visa/: +page.svelte
server/: .dockerignore  .example.env  Dockerfile  Makefile  README.md  package.json  pyproject.toml
server/app/: main.py  middleware.py
server/app/fetchers/: _types.py  catering.py  equipment.py  flights.py  ground_transport.py  openai.py  printing.py  venue.py  visa.py
server/app/fetchers/flights/: _types.py  airports.csv  cities.csv  flights.py
server/app/fetchers/per_diem/: _types.py  fetcher.py
server/app/fetchers/per_diem/scrapers/: dssr.py  exchange_rate.py  gsa.py  gssr.py
server/app/fetchers/translations/: VendorRates.csv  _types.py  fetcher.py
server/app/routers/: _types.py  estimates.py
server/src/: index.ts  types.ts
server/src/fetcher/: route.ts
