[project]
name = "server"
version = "0.1.0"
description = "Concierge Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fast-flights>=2.2",
    "fastapi[standard]>=0.116.1",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "rapidfuzz>=3.14.0",
    "requests>=2.32.4",
]
